--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.553.0",
     "next": "16.0.3",
     "react": "19.2.0",
+    "react-datepicker": "^8.9.0",
     "react-dom": "19.2.0",
     "recharts": "^3.4.1",
     "tailwind-scrollbar-hide": "^4.0.0"
